--- a/bristol_city_council/budget_consultation_2023.html
+++ b/bristol_city_council/budget_consultation_2023.html
@@ -122,7 +122,7 @@ Typos, corrections and suggestions to twitter @MrDanack or to <a href="https://g
             </table>
         </td>
         <td>
-            Spend money on training/recruiting more foster locally, saving money by not spending it on foster agencies, or distance foster families.
+            Spend money on training/recruiting more foster parents locally, saving money by not spending it on foster agencies, or distance foster families.
 
         </td>
     </tr>
