--- a/bristol_city_council/budget_consultation_2023.html
+++ b/bristol_city_council/budget_consultation_2023.html
@@ -56,6 +56,8 @@
         }
 
     </style>
+    <script src="/js/qrcode.js"></script>
+
 </head>
 
 <body>
@@ -1423,6 +1425,15 @@ Typos, corrections and suggestions to twitter @MrDanack or to <a href="https://g
 
 </table>
 
+    <h2>Share this page</h2>
+<div>
+<div id="qrcode"></div>
+<div>Pointing a device at this QR code should open it.</div>
+</div>
+
+<script type="text/javascript">
+    new QRCode(document.getElementById("qrcode"), window.location.href );
+</script>
 
 </body>
 
