--- a/bristol_city_council/budget_consultation_2023.html
+++ b/bristol_city_council/budget_consultation_2023.html
@@ -168,7 +168,7 @@ Typos, corrections and suggestions to twitter @MrDanack or to <a href="https://g
 
         </td>
         <td>
-            Full-time employees are cheaper than outsourcing.
+            Full-time employees are cheaper than outsourcing, and kids avoiding needing to be placed in care is better for everyone.
         </td>
     </tr>
     <tr>
